WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212142
Fix for accessibility-node-memory-management.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=212142
Summary
Fix for accessibility-node-memory-management.html in isolated tree mode.
Andres Gonzalez
Reported
2020-05-20 08:46:24 PDT
Fix for accessibility-node-memory-management.html in isolated tree mode.
Attachments
Patch
(5.64 KB, patch)
2020-05-20 08:57 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-05-20 08:57:23 PDT
Created
attachment 399842
[details]
Patch
chris fleizach
Comment 2
2020-05-20 09:12:50 PDT
Comment on
attachment 399842
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=399842&action=review
> Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:380 > auto& wrapper = item.m_wrapper ? item.m_wrapper : item.m_isolatedObject->wrapper();
is this a pointer? should we be using auto& ?
Andres Gonzalez
Comment 3
2020-05-20 10:55:09 PDT
(In reply to chris fleizach from
comment #2
)
> Comment on
attachment 399842
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=399842&action=review
> > > Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:380 > > auto& wrapper = item.m_wrapper ? item.m_wrapper : item.m_isolatedObject->wrapper(); > > is this a pointer? should we be using auto& ?
I believe it is ok because wrapper is a reference to either NodeChange::m_wrapper or AXCoreObject::m_wrapper, which is a RetainPtr.
EWS
Comment 4
2020-05-20 11:21:14 PDT
Committed
r261934
: <
https://trac.webkit.org/changeset/261934
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399842
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-05-20 11:22:15 PDT
<
rdar://problem/63455951
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug